# SimStraddleCarrier

./: CMakeLists.txt  package.xml
agents/: control_agent.md  interfaces.md  model_agent.md  world_agent.md
config/: sim_params.yaml
description/urdf/: straddle_carrier.urdf.xacro
include/sim_straddle_carrier/: control_node.hpp
launch/: sim.launch.py
scripts/: teleop.py
src/: control_node.cpp
worlds/: port_yard.sdf
